# sighook

./: .gitignore  CMakeLists.txt  Makefile
include/: sighook.h
src/: allocator.c  emit.h  emit_aarch64.c  sighook.c
tests/: assert_.h  main.c  test_asm.c  test_asm.h  test_emit.c  test_unhook.c  test_unhook_sync.c
